--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="ecod.dubai.workspace">
+    package="bpdc.kunalmalhotra.workspace.cardashboard">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -10,7 +10,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="ecod.dubai.workspace.bankingbot.BankingBotActivity">
+        <activity android:name="bpdc.kunalmalhotra.workspace.cardashboard.CarDashboardBotActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
